--- a/ex2.html
+++ b/ex2.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script>
+        const a=Math.random()*(10-1)+1
+        console.log(`Random value between 1 and 10 is ${a}`);
+    </script>
 </head>
 <body>
-    <script>
-        var x=10,y=20
-        var sum=x+y
-        var big=x>y?x:y
-        document.write(x+"+"+y+"="+sum)
-        document.write("<BR> large= "+big)
-    </script>
+    
 </body>
 </html>
