--- a/ex11.html
+++ b/ex11.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script>
+        function checkPalindrome(string){
+            const len=string.length;
+            for(let i=0;i<len/2;i++){
+                if(string[i]!==string[len-1-i]){
+                    return 'It is not a plaindrome';
+                }
+            }
+            return 'It is a palindrome';
+        }
+        const string=prompt('Enter a string: ');
+        const value=checkPalindrome(string);
+        console.log(value);
+    </script>
 </head>
 <body>
-    <script>
-        function round(num){
-            return Math.round(num*100)/100;
-        }
-        document.write(round(4.205))
-    </script>
+    
 </body>
 </html>
