--- a/ex15.html
+++ b/ex15.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script>
+        const string='Mr Red has a red house and a red car';
+        const newText=string.replace('red','blue');
+        console.log(newText);
+    </script>
 </head>
 <body>
-    <script>
-        items=new Array(3);
-        items[0]="pen";
-        items[1]="Baby powder";
-        items[2]="Ink";
-        document.write(items.join()+"<BR>");
-        document.write(items.reverse().join()+"<BR>");
-            document.write(items.sort().join()+"<BR>");
-    </script>
+    
 </body>
 </html>
