--- a/ex16.html
+++ b/ex16.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script>
+        function reverseString(str){
+            let newString="";
+            for(let i=str.length-1;i>=0;i--){
+                newString+=str[i];
+            }
+            return newString;
+        }
+        const string=prompt('Enter a string: ');
+        const result=reverseString(string);
+        console.log(result);
+    </script>
 </head>
 <body>
-    <script>
-        var a=[33,4,100,222]
-        document.write(a.join()+"<BR>");
-            a.sort(function(a,b){return a-b;})
-            document.write(a.join());
-    </script>
+    
 </body>
 </html>
