--- a/ex19.html
+++ b/ex19.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script>
+        function countString(str,letter){
+            let count=0;
+            for(let i=0;i<str.length;i++){
+                if(str.charAt(i)==letter){
+                    count+=1;
+                }
+            }
+            return count;
+        }
+        const string=prompt('Enter a string: ');
+        const letterToCheck=prompt('Enter a letter to check: ');
+        const result=countString(string,letterToCheck);
+        console.log(result);
+    </script>
 </head>
 <body>
-    <script lang="JavaScript">
-        function tot(){
-            var x=parseInt(document.Simple.first.value)
-            var y=parseInt(document.forms[0].elements[1].value)
-            document.Simple.sum.value=x+y
-        }
-    </script>
-    <form name="Simple">
-        <input type="text" size="4" name="first" value=""><br>
-        <input type="text" size="4" name="second" value=""><br>
-        <input type="button" value="Click" onclick="tot();"><br>
-        <input type="text" name="sum" value=" "><br>
-    </form>
+    
 </body>
 </html>
