--- a/ex3.html
+++ b/ex3.html
@@ -4,15 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script>
+        function factorial(x){
+            if(x==0){
+                return 1;
+            }
+            else{
+                return x*factorial(x-1);
+            }
+        }
+        const num=prompt('Enter a positive number:');
+        if(num>=0){
+            const result=factorial(num);
+            console.log(`The factorial of ${num} is ${result}`);
+        }
+        else{
+            console.log('Enter a positive number.')
+        }
+    </script>
 </head>
 <body>
-    <script>
-        var x=11,mesg=" "
-        if(x%2==0)
-        mesg="Even";
-    else
-    mesg="odd";
-document.write(x+" is "+mesg)
-    </script>
+    
 </body>
 </html>
