--- a/ex5.html
+++ b/ex5.html
@@ -4,15 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
     <script>
-        var i,j;
-        for(i=19;i>0;i--){
-            for(j=1;j<=i;j++)
-            document.write(i+" ");
-        document.write("<BR>");
+        const number=parseInt(prompt("Enter a positive number: "));
+        let isPrime=true;
+        if(number==1){
+            console.log("1 is neither prime nor composite number.");
+        }
+        else if(number>1){
+            for(let i=2;i<number;i++){
+                if(number%i==0){
+                    isPrime=false;
+                    break;
+                }
+            }
+            if(isPrime){
+                console.log(`${number} is a prime number`);
+            }
+            else{
+                console.log(`${number} is not prime number`);
+            }
+        }
+        else{
+            console.log("The number is not a prime number,")
         }
     </script>
+</head>
+<body>
+    
 </body>
 </html>
