--- a/ex6.html
+++ b/ex6.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script>
+        const number=parseInt(prompt('Enter the number of terms: '));
+        let n1=0,n2=1,nextTerm;
+        console.log('Fibonacci Series.');
+        for(let i=1;i<=number;i++){
+            console.log(n1);
+            nextTerm=n1+n2;
+            n1=n2;
+            n2=nextTerm;
+        }
+    </script>
 </head>
 <body>
-    <script>
-        var num=123
-        var count=0
-        do{
-            count++;
-            num/=10;
-        }while(num>1);
-        document.write(count)
-    </script>
+    
 </body>
 </html>
