--- a/ex7.html
+++ b/ex7.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script>
+        const number=prompt("Enter a positive integer");
+        const numberOfDigits=number.length;
+        let sum=0;
+        let temp=number;
+        while(temp>0){
+            let remainder=temp%10;
+            sum+=remainder**numberOfDigits;
+            temp=parseInt(temp/10);
+        }
+        if(sum==number){
+            console.log(`${number} is an Armstrong number`);
+        }
+        else{
+            console.log(`${number} is not an Armstrong number.`)
+        }
+    </script>
 </head>
 <body>
-    <script>
-        var num=123
-        var sum=0
-        var digit
-        while(num>0){
-            digit=num%10
-            sum+=digit
-            num=parseInt(num/10)
-        }
-        document.write(sum)
-    </script>
+    
 </body>
 </html>
