--- a/ex8.html
+++ b/ex8.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script>
+        let hcf;
+        const number1=prompt('enter a first positive integer: ');
+        const number2=prompt('enter a second positive integer: ');
+        for(let i=1;i<=number1&&i<=number2;i++){
+            if(number1%i==0&&number2%i==0){
+                hcf=i;
+            }
+        }
+        console.log(`HCF of ${number1} and ${number2} is ${hcf}`);
+    </script>
 </head>
 <body>
-    <script>
-        function gcd(m,n){
-            return n>0?gcd(n,m%n):m;
-        }
-        document.write(gcd(92,16))
-    </script>
+    
 </body>
 </html>
