--- a/ex9.html
+++ b/ex9.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script>
+        const num1=prompt('Enter a first positive integer: ');
+        const num2=prompt('Enter a second positive integer: ');
+        let min=(num1>num2)?num1:num2;
+        while(true){
+            if(min%num1==0&&min%num2==0){
+                console.log(`The LCM of ${num1} and ${num2} is ${min}`);
+                break;
+            }
+            min++;
+        }
+    </script>
 </head>
 <body>
-    <script>
-        var adult=confirm("You certify that you are over 18 years old?")
-        if(adult)
-        alert("Eligible")
-    else
-    alert("Not Eligible")
-    </script>
+    
 </body>
 </html>
