--- a/ex1.html
+++ b/ex1.html
@@ -5,15 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
-        const number1=2.25;
-        const number2=-4;
-        const number3='hello';
-        const result1=Math.sqrt(number1);
-        const result2=Math.sqrt(number2);
-        const result3=Math.sqrt(number3);
-        console.log(`The square root of ${number1} is ${result1}`);
-        console.log(`The square root of ${number2} is ${result2}`);
-        console.log(`The square root of ${number3} is ${result3}`);
+        // Function to convert rectangular coordinates to polar coordinates
+function rectangularToPolar(x, y) {
+  const radius = Math.sqrt(x * x + y * y);
+  const angleRad = Math.atan2(y, x);
+  const angleDeg = (angleRad * 180) / Math.PI;
+
+  return { radius, angleRad, angleDeg };
+}
+
+// Function to convert polar coordinates to rectangular coordinates
+function polarToRectangular(radius, angleRad) {
+  const x = radius * Math.cos(angleRad);
+  const y = radius * Math.sin(angleRad);
+
+  return { x, y };
+}
+
+// Example usage:
+const rectangularCoords = { x: 3, y: 4 };
+const polarCoords = rectangularToPolar(rectangularCoords.x, rectangularCoords.y);
+
+console.log("Rectangular to Polar:");
+console.log("Rectangular Coordinates:", rectangularCoords);
+console.log("Polar Coordinates:", polarCoords);
+
+const polarCoords2 = { radius: 5, angleRad: Math.PI / 3 };
+const rectangularCoords2 = polarToRectangular(polarCoords2.radius, polarCoords2.angleRad);
+
+console.log("\nPolar to Rectangular:");
+console.log("Polar Coordinates:", polarCoords2);
+console.log("Rectangular Coordinates:", rectangularCoords2);
+
     </script>
 </head>
 <body>
