--- a/ex4.html
+++ b/ex4.html
@@ -5,26 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
-        function sum(){
-            if(arguments.length==0){
-                console.log('You have not passed any argument');
-            }
-            else if(arguments.length==1){
-                console.log('Pass at least two arguments');
-            }
-            else{
-                let result=0;
-                let length=arguments.length;
-                for(i=0;i<length;i++){
-                    result=result+arguments[i];
-                }
-                console.log(result);
-            }
-        }
-        sum();
-        sum(5);
-        sum(5,9);
-        sum(1,2,3,4,5,6,7,8,9);
+        // Define a dictionary to store country-capital pairs
+const countryCapitalMap = {
+  "USA": "Washington, D.C.",
+  "Canada": "Ottawa",
+  "United Kingdom": "London",
+  "France": "Paris",
+  "Germany": "Berlin",
+  "Japan": "Tokyo",
+  // Add more country-capital pairs as needed
+};
+
+// Function to get the capital for a given country name
+function getCapital(countryName) {
+  return countryCapitalMap[countryName] || "Capital not found";
+}
+
+// Function to get the country name for a given capital
+function getCountry(capitalName) {
+  for (const country in countryCapitalMap) {
+    if (countryCapitalMap[country] === capitalName) {
+      return country;
+    }
+  }
+  return "Country not found";
+}
+
+// Example usage to get the capital for a country
+const userCountry = "USA"; // Replace with the user's input
+const capital = getCapital(userCountry);
+
+if (capital !== "Capital not found") {
+  console.log(`The capital of ${userCountry} is ${capital}`);
+} else {
+  console.log(`Capital not found for ${userCountry}`);
+}
+
+// Example usage to get the country for a capital
+const userCapital = "Berlin"; // Replace with the user's input
+const country = getCountry(userCapital);
+
+if (country !== "Country not found") {
+  console.log(`The country with capital ${userCapital} is ${country}`);
+} else {
+  console.log(`Country not found for capital ${userCapital}`);
+}
+
     </script>
 </head>
 <body>
