--- a/ex9.html
+++ b/ex9.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Social Security Number Lookup</title>
     <script>
-        const num1=prompt('Enter a first positive integer: ');
-        const num2=prompt('Enter a second positive integer: ');
-        let min=(num1>num2)?num1:num2;
-        while(true){
-            if(min%num1==0&&min%num2==0){
-                console.log(`The LCM of ${num1} and ${num2} is ${min}`);
-                break;
-            }
-            min++;
+        function lookupState() {
+            // Get the first three digits from the input field
+            const inputSSN = document.getElementById("ssnInput").value;
+            const firstThreeDigits = inputSSN.substr(0, 3);
+
+            // Define an object that maps first three digits to states
+            const ssnToState = {
+                "001": "New Hampshire",
+                "002": "Maine",
+                // Add more mappings as needed
+            };
+
+            // Lookup the state or territory based on the input
+            const result = ssnToState[firstThreeDigits] || "State or territory not found";
+
+            // Display the result
+            document.getElementById("result").textContent = `Corresponding state or territory: ${result}`;
         }
     </script>
 </head>
 <body>
-    
+    <h2>Social Security Number Lookup</h2>
+    <label for="ssnInput">Enter the first three digits of SSN:</label>
+    <input type="text" id="ssnInput" maxlength="3">
+    <button onclick="lookupState()">Search</button>
+    <p id="result"></p>
 </body>
 </html>
