--- a/ex15.html
+++ b/ex15.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script>
-        const string='Mr Red has a red house and a red car';
-        const newText=string.replace('red','blue');
-        console.log(newText);
-    </script>
 </head>
 <body>
-    
+    <h1>BDI Element Example</h1>
+ <p>Here is a sentence with <bdi>Arabic text: مرحبا بكم/</bdi> embedded 
+in it.</p>
+ <p>Another sentence with <bdi>Hebrew text: שלום עליכם/</bdi>
+included.</p>
 </body>
 </html>
