--- a/ex24.html
+++ b/ex24.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" manifest="demo.appcache">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <p>Hello HTML5!</p> 
+    <h1>.appcache</h1>
 </body>
 </html>
