--- a/index.html
+++ b/index.html
@@ -1,37 +1,26 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+
+<html>
 <head>
-  <title>Bootstrap Labs</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+
 </head>
+
 <body>
-  <div class="container"> 
-    <div class="jumbotron"> 
-    <h1>Hello, JUMBO world!</h1> 
-    <p> 
-    This is an example of a Bootstrap Jumbotron. 
-    This component allows you to highlight content in a 
-    resizeable, responsive manner. 
-    </p> 
-    </div>
-    <div class="row"> 
-      <div class="col-sm-12"> 
-      Bootstrap is really cool! 
-      Bootstrap is really cool! 
-      Bootstrap is really cool! 
-      Bootstrap is really cool! 
-      Bootstrap is really cool! 
-      Bootstrap is really cool! 
-      Bootstrap is really cool! 
-      Bootstrap is really cool! 
-      Bootstrap is really cool! 
-      Bootstrap is really cool! 
-      Bootstrap is really cool! 
-      Bootstrap is really cool! 
-      </div> 
-      </div> 
-      </div>
-  <script src="js/jquery-1.9.1.js"></script> 
-  <script src="js/bootstrap.min.js"></script>
+  <h1>Images</h1>
+
+  <a href="page1.html"><img src="nyc.png" width="50">New York</a><br>
+  <a href="page2.html"><img src="france.png" width="50">France</a><br>
+  <a href="page3.html"><img src="tetons.png" width="50">Grand Tetons</a><br>
+
 </body>
- 
+</html>
+
+
+
+
+
+
+
+
+
+
