--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
 <html>
 <head>
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link rel="stylesheet" href="../css/jquery.mobile-1.3.1.css" />
+<script src="../jquery/jquery-1.9.1.js"></script>
+<script src="../jquery/jquery.mobile-1.3.1.js"></script>
+
 </head>
 
 <body>
-  <h1>Images</h1>
 
-  <a href="page1.html"><img src="nyc.png" width="50">New York</a><br>
-  <a href="page2.html"><img src="france.png" width="50">France</a><br>
-  <a href="page3.html"><img src="tetons.png" width="50">Grand Tetons</a><br>
+  <div data-role=page data-theme=c>    
+
+    <!-- INSERT HTML HERE -->
+
+  </div>
 
 </body>
 </html>
